# MilanoWaterProject

./: .cursorrules  .gitignore  CMakeCache.txt  CMakeLists.txt  Focus.md  Installing InfluxDB.txt  MWP.pptx  Makefile  README.md  WaterDiag.xlsm  WaterDiag.xlsx  WemosD1-Pinout.rtf  Xsetup.sh  cmake_install.cmake  crontab.file  h2o.sh  install_manifest.txt  main.cpp  newtest.c  pi.code-workspace  pumpdata.txt  setup.sh  when-needed-h2o.sh  whenneededh2o.sh  ~$MWP.pptx  ~$WaterDiag.xlsm
.notes/: Focus.md
AlertMonitor/: monitor.c
AsynchVer/: main.cpp  msgarrvdAsync.c
Blynk/: CMakeLists.txt  Makefile  blynk  blynkWater  blynkWater.c  main.cpp  monitor.c
BlynkAlert/: CMakeLists.txt  blynkAlert  blynkAlert.c  main.cpp
BlynkLog/: CMakeLists.txt  blynkLog  blynkLog.c
ESPClients/ESP32Client/: ESP32Client.ino
ESPClients/ESP32ClientWell/: ESP32ClientWell.ino
ESPClients/ESP32ClientWell - depricated/: ESP32ClientWell.ino
ESPClients/ESP32ClientWellX/: ESP32ClientWellX.ino
ESPClients/ESP8266ClientFlow/: ESP8266ClientFlow.ino
ESPClients/ESP8266ClientFlow - depricated/: ESP8266ClientFlow.ino
ESPClients/ESP8266ClientTank/: ESP8266ClientTank.ino
ESPClients/ESPClientTankGallons/: ESPClientTankGallons.ino
ESPClients/GenericFlow8266  - not used/GenericFlow/: GenericFlow.ino
ESPClients/GenericFlow8266/GenericFlow/: GenericFlow.ino
ESPClients/GenericFlow8266/archive/: ESP8266ClientFlowOld.ino
ESPClients/GenericFlowX/: GenericFlowX.ino
ESPClients/GenericSensor/: GenericSensor.ino
ESPClients/GenericWellX/: GenericWellX.ino
ESPClients/NanoClientWell/: NanoClientWell.ino
ESPClients/archive/: ESPClient.ino
ESPClients/archive/ESP32ClientWell - depricated/ESP32ClientWell/: ESP32ClientWellRev1.ino
ESPClients/archive/ESP8266ClientTank -depricated/ESP8266ClientTank/: ESP8266ClientTank.ino
ESPClients/archive/GenericFlowXX/: GenericFlowXX.ino
ESPClients/archive/GenericFlowXYZ/: GenericFlowXYZ.ino
ESPClients/archive/GenericSensorTest/: GenericSensorTest.ino
FlowMonitor/: CMakeLists.txt  Makefile  Makefile.bak  cmake_install.cmake  flowmonitor  flowmonitor.c
HouseMonitor/: CMakeLists.txt  housemonitor  housemonitor.c
IrrigationMonitor/: CMakeLists.txt  irrigationmonitor  irrigationmonitor.c  irrigationmonitor.orig
MilanoWaterProject/: README.md  cronchk.sh  main.c
MilanoWaterProject.xcodeproj/: project.pbxproj
MilanoWaterProject.xcodeproj/project.xcworkspace/xcuserdata/dub.xcuserdatad/: UserInterfaceState.xcuserstate
MilanoWaterProject.xcodeproj/xcshareddata/xcschemes/: FlowMonitor.xcscheme  TankAlert.xcscheme  TankMonitor.xcscheme  TankSubscriber.xcscheme
MilanoWaterProject.xcodeproj/xcuserdata/dub.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MilanoWaterProject.xcodeproj/xcuserdata/dub.xcuserdatad/xcschemes/: xcschememanagement.plist
MilanoWaterProject/TankMonitor/: monitor.c
MilanoWaterProject/TankSubscriber/: subscriber.c
MilanoWaterProject/include/: water.h
Monitor/: CMakeLists.txt  monitor  monitor.c
SensorTest/: CMakeLists.txt  sensortest  sensortest.c  test.txt
SysAlert/: CMakeLists.txt  alert  alert.c  alert.orig
SysLog/: CMakeLists.txt  log  log.c  log.experi
SysTest/: readme  test  test.c  test.txt  well_test.txt
SysTest/tests/: floats.txt  tankgallons.txt
TankAlert/: Makefile  alert  alert.c
TankESPClient/ESPClient/: ESP8266ClientFlow.ino
TankMonitor/: CMakeLists.txt  Makefile  Newtankmonitor.c  cmake_install.cmake  monitor  monitor.c  tankmonitor  tankmonitor.c  tankmonitor.old
TankSubscriber/: CMakeLists.txt  Makefile  subscriber  subscriber.c
TankTest/: CMakeLists.txt  readme  test  test.c  test.txt
TankTest/tests/: floats.txt
Well3Monitor/: CMakeLists.txt  well3monitor  well3monitor.c
WellMonitor/: CMakeLists.txt  Makefile.bak  subscriber  subscriber.c  wellmonitor  wellmonitor.c
go/: go.mod
go/cmd/monitor/: main.go
include/: alert.h  water.h
log_data/: go.mod  go.sum
log_data/cmd/logit/: main.go  main.good1  main.good2  main.good3
log_data/cmd/logitdebug/: main.go
log_data/docs/: CONTEXT.md
logdata/: console-log.txt  datafile.txt  pumpdata.txt
misc/: vsftpd.conf
mylib/: CMakeLists.txt  Makefile  flowmon.c  flowmon.orig  logMsg.c  logTest.c  msgarrvd.c
pyrainbird/: RainbirdSync.py
