cmake_minimum_required(VERSION 3.2)
project (blynkAlert LANGUAGES CXX)
SET (CMAKE_CXX_FLAGS ${CMAKE_CXX_STANDARD} "-DLINUX")
add_executable(blynkAlert main.cpp ./utility/BlynkDebug.cpp ./utility/BlynkHandlers.cpp ./utility/BlynkTimer.cpp)
target_link_directories(blynkAlert PRIVATE /home/pi/paho.mqtt.c/build/output/lib ../mylib)
target_link_libraries(blynkAlert libpaho-mqtt3c.so libpaho-mqtt3a.so libpaho-mqtt3as.so libpaho-mqtt3cs.so libmylib.a)
target_include_directories(blynkAlert PRIVATE /home/pi/blynk-library/src/BlynkAlert)
target_include_directories(blynkAlert PRIVATE /home/pi/MilanoWaterProject/BlynkAlert/utility)
target_include_directories(blynkAlert PRIVATE /home/pi/blynk-library/src)
target_include_directories(blynkAlert PRIVATE /home/pi/blynk-library/linux)
install(TARGETS blynkAlert DESTINATION /home/pi/MilanoWaterProject/bin)