cmake_minimum_required(VERSION 3.2)
project (flowmonitor)
add_executable(flowmonitor flowmonitor.c)
target_link_directories(flowmonitor PRIVATE /home/pi/paho.mqtt.c/build/output/lib)
target_link_libraries(flowmonitor libpaho-mqtt3c.so libpaho-mqtt3a.so libpaho-mqtt3as.so libpaho-mqtt3cs.so)
install(TARGETS flowmonitor DESTINATION /home/pi/MilanoWaterProject/bin)