cmake_minimum_required(VERSION 3.2)
project (tankmonitor)
add_executable(tankmonitor tankmonitor.c)
target_link_directories(tankmonitor PRIVATE /home/pi/paho.mqtt.c/build/output/lib ../mylib)
target_link_libraries(tankmonitor libpaho-mqtt3c.so libpaho-mqtt3a.so libpaho-mqtt3as.so libpaho-mqtt3cs.so libmylib.a)
install(TARGETS tankmonitor DESTINATION /home/pi/MilanoWaterProject/bin)