cmake_minimum_required(VERSION 3.2)
project (subsriber)
add_executable(subsriber subsriber.c)
target_link_directories(subsriber PRIVATE /home/pi/paho.mqtt.c/build/output/lib)
target_link_libraries(subsriber libpaho-mqtt3c.so libpaho-mqtt3a.so libpaho-mqtt3as.so libpaho-mqtt3cs.so)
install(TARGETS subsriber DESTINATION /home/pi/MilanoWaterProject/bin)