cmake_minimum_required(VERSION 3.2)
project (subscriber)
add_executable(subscriber subscriber.c)
target_link_directories(subscriber PRIVATE /home/pi/paho.mqtt.c/build/output/lib ../mylib)
target_link_libraries(subscriber libpaho-mqtt3c.so libpaho-mqtt3a.so libpaho-mqtt3as.so libpaho-mqtt3cs.so libmylib.a)
install(TARGETS subscriber DESTINATION /home/pi/MilanoWaterProject/bin)