cmake_minimum_required(VERSION 3.2)
project (wellmonitor)
add_executable(wellmonitor wellmonitor.c)
target_link_directories(wellmonitor PRIVATE /home/pi/paho.mqtt.c/build/output/lib ../mylib)
target_link_libraries(wellmonitor libpaho-mqtt3c.so libpaho-mqtt3a.so libpaho-mqtt3as.so libpaho-mqtt3cs.so libmylib.a)
install(TARGETS wellmonitor DESTINATION /home/pi/MilanoWaterProject/bin)